Fix Call To Action Footer. Correct Size & centered.  Just need to fix the -Thor, God of Thunder from stretching when the window is stretched

--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 /*Affects the entire page*/
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+    width: 100%;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
-
 }
 /*Header only section*/
 .top {             /*Changes the width of content at the borders of the page*/
@@ -121,6 +125,7 @@ a {
     align-items: center;
     padding: 100px 200px;
     background-color: #E5E7EB;
+    
 }
 
 .quote,
@@ -134,21 +139,25 @@ a {
 }
 
 .author {
-    align-self: flex-end;
+    margin-left: auto;
+    max-width: 1000px;
 }
 
 /*Footer*/
 
-.footer {
+.footer-container {
     display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #3882F6;
     padding: 20px 50px;
     gap: 30px;
-    align-items: center;
     color: #E5E7EB;
     border-radius: 10px;
-    justify-content: center;
-    margin: 50px 
+    margin: 50px;
+    width: 700px;
+    align-self: center;
+    
 
 
 }
